# zapay_challenge_back_end

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yaml  release.yml
src/core/debts/application/: dto.py  use_cases.py
src/core/debts/application/SP/: use_case.py
src/core/debts/application/SP/services/: __init__.py  api.py  parser.py  service.py
src/core/debts/domain/: exceptions.py  validators.py
src/core/debts/domain/entities/: __init__.py  dpvat.py  ipva.py  licenciamento.py  multa.py
src/core/debts/infra/django_app/: admin.py  api.py  apps.py  urls.py
src/core/debts/tests/application/SP/services/: test_parser_SP.py  test_service_SP.py
src/core/debts/tests/application/SP/services/json_schemas/: DPVATs.json  IPVAs.json  Licenciamento.json  Multas.json
src/core/debts/tests/application/SP/services/responses_SP/: ConsultaDPVAT.py  ConsultaIPVA.py  ConsultaMultas.py  Licenciamento.py
src/django_app/: container.py  settings.py  urls.py
src/tests/: test_initial_cov.py
